tools/architecture/validate-source-imports/tests/fixtures/invalid/platform-package-resolves-outside-package-invalid/src/index.ts
import something from "@architecture/validate-source-imports";
export { something };
